1+1
Welcome to Node.js v14.19.0.
Type ".help" for more information.
> 2
> 3
>  :
 ^

Uncaught SyntaxError: Unexpected token ':'
> undefined
> 